--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 # h2console ????
 spring.h2.console.enabled=true
 # h2 ?????? url ??
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 
 # sql ?? ???
 spring.jpa.show-sql=true
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 # datasource ???? data.sql ??? ?????. (resources ?? ?? sql ??? ???? sql???
 # jpa ??? ???? ?? ???? ???.
 spring.jpa.defer-datasource-initialization=true
+
+# ???? ??
+spring.security.user.name=user
+spring.security.user.password=pass
